fix overflow x problem

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 @import url(https://db.onlinewebfonts.com/c/452ec27decf4369db2b93619854b5638?family=FuseV.2Display-Regular); 
-
+  
 html, body {
     width: 100%;
     max-width: 100vw;
@@ -1214,6 +1214,11 @@ ul li{
         height: auto;
     }
 
+    .schedule__type {
+        width: 300px;
+        max-width: 100%;
+    }
+
     .live__container--full {
         display: none;
     }
@@ -1225,7 +1230,6 @@ ul li{
 
     .schedule__list {
         width: 100%;
-        padding: 20px 10px;
     }
 
     .schedule__item,
@@ -1240,6 +1244,12 @@ ul li{
     .schedule__list--subtitle {
         flex-wrap: wrap;
         padding-left: 10px;
+        max-width: 100%;
+    }
+
+    .schedule__item, .schedule__item--open{
+        margin-left: 10px;
+        padding: 8px;
     }
 
     .schedule__time {
